--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,27 @@ h1 {
     font-weight: bold;
 }
 
+h2 {
+    position: absolute;
+    top: -10px;
+    right: 20px;
+    margin: 40px auto;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+p {
+    line-height:normal;
+}
+
 #start {
     background-color: #001b44;
     color: whitesmoke;
     margin: 20px  auto;
+    border-radius: 4px;
+    border-style: none;
+    box-shadow: rgba(34,36,38,.15) 3px 0 0 4px inset;
+    cursor: pointer;
+    font-size: 1.3em;
+    padding: 15px;
   }
