--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,8 @@
 }
 :root {
     --neutral: #eff5f8;
-    --dark: #001b44;
+    --dark: #081D5F;
+    --content: #AAADB3 ;
 }
 
 body {
@@ -17,28 +18,33 @@ body {
   color: var(--dark);
 }
 
-.wrapper {
-    padding: 10px ;
+#wrapper {
+    display: flex;
+    margin: 20px auto;
+    padding: 85px ;
     border-radius: 5px;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
-.title-info {
-    display: block;
-    margin: 80px auto;
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+#container-title, .container-info, .container-scorebox, 
+#container-quiz, #quiz-questions, #quiz-options {
+    /*display: block;*/
     text-align: center;
     transition: 0.3s;
     width: 60vw;
     padding-top: 20px;
-}
-
-.container-info {
-    display: block;
-    margin: 80px auto;
-    text-align: center;
-    transition: 0.3s;
-    width: 60vw;
-    padding-top: 20px;
+    
 }
 
 h1 {
@@ -63,10 +69,6 @@ h3 {
     left: 20px;
 }
 
-p {
-    line-height:normal;
-}
-
 #start {
     background-color: #001b44;
     color: whitesmoke;
@@ -74,42 +76,51 @@ p {
     border-radius: 4px;
     border-style: none;
     box-shadow: rgba(34,36,38,.15) 3px 0 0 4px inset;
-    cursor: pointer;
     font-size: 1.3em;
     padding: 15px;
-  }
+    width: 170px;
+}
 
-  .quiz-options {
-      display: grid;
-      width: 800px;
-      grid-template-columns: repeat(1, auto);
-      gap: 10px;
-      margin: 20px 0;
-  }
+#start:hover {
+    cursor: pointer;
+    box-shadow: none;
+    transform: none;
+}
 
-  .option-answer {
-      border: 1px solid var(--dark);
-      padding: 5px;
-      border-radius: 5px;
-  }
+.btn-options {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0;
+}
 
-  .nextbtn {
+.btn-options:hover {
+    cursor: pointer;
+    transform: scale(1.02);
+    transition: transform 100ms;
+    box-shadow: 0 0.4rem  1.4rem 0 var(--content)
+}
+
+.option-answer {
+    padding: 16px;
+    width: 100%;
+    box-shadow: 0 0.4rem  1.4rem 0 var(--content);
+}
+
+.correct {
+    background:linear-gradient(32deg, rgba(11,223,36) 0%, rgb(41,232,111) 100%);
+}
+
+.wrong {
+    background: #B5163F ;
+}
+
+.nextbtn {
     border: 1px solid var(--dark);
     padding: 5px;
     border-radius: 5px;
-  }
+}
 
-  .option-answer hover {
-      border-color: black;
-  }
 
-  .correct {
-      background-color: #40ff00;
-  }
-
-  .wrong {
-      background-color: #ff4000;
-  }
 
   .hide-container-quiz {
     display: none;
